hphp/hack/doc/hack-langspec/tests/Expressions/Postfix_Operators/scope_resolution_operator.php.expectf

Fatal error: HH mode: content before <?hh (Line: 1, Char: 2)
syntax error, unexpected T_HH_ERROR, expecting $end in %s/tests/Expressions/Postfix_Operators/scope_resolution_operator.php on line 1